# slm-polkit-agent

./: .gitignore  CMakeLists.txt
Qml/polkit-agent/: AuthDialog.qml  AuthIdentityView.qml  PasswordField.qml
cmake/: Sources.cmake
docs/: architecture.md
src/: authdialogcontroller.cpp  authdialogcontroller.h  authsession.cpp  authsession.h  authsessionmanager.cpp  authsessionmanager.h  iconprovider.cpp  iconprovider.h  main.cpp  slmpolkitagent.cpp  slmpolkitagent.h
src/dbus/: agentnotifier.cpp  agentnotifier.h
systemd/: slm-polkit-agent.service
